--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
       <footer class="footer">
         <span>COPYRIGHT @2019
            <a href="https://www.facebook.com/profile.php?id=100009413597121" target="_blank"">POPEYE</a></span>
-        All Right Reserved
+        All Right Reserved ...
       </footer>
 
 
