Add About.html 1Bug

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-alpha">
 
         <div class="container">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="index.html">
             <img src="C:/xampp/htdocs/blog/Assets/image/logo.png" width="30" height="30" class="d-inline-block align-top" alt="">
             Classnaja
           </a>
@@ -25,10 +25,10 @@
         <div class="collapse navbar-collapse" id="navbarKey">
           <ul class="navbar-nav ml-auto text-center">
             <li class="nav-item active">
-               <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+               <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-               <a class="nav-link" href="#">About</a>
+               <a class="nav-link" href="about.html">About</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">Blog</a>
