--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
                <a class="nav-link" href="about.html">About</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Blog</a>
+                <a class="nav-link" href="Blog.html">Blog</a>
              </li>
              <li class="nav-item">
                 <a class="nav-link" href="#">contact</a>
@@ -95,19 +95,29 @@
                       <p class="text-info">30 Mar 2000</p> 
                  </div>
                  <div class="timeline-card">
-                       <h5>เกิดดดด</h5>
-                       <p class="text-muted"> เกิด 30 </p>
+                       <h5>วันเกิด</h5>
+                       <p class="text-muted"> เกิดวันที่ 30 มีนาคม 2000 </p>
                  </div>
              </li>
              <li class="invverted">
               <div class="timeline-badge">
-                   <p class="text-info">30 Mar 2000</p> 
+                   <p class="text-info">15 May 2015</p> 
               </div>
               <div class="timeline-card">
-                    <h5>เกิดดดด</h5>
-                    <p class="text-muted"> เกิด 30 </p>
+                    <h5>เข้าเรียนมัธยมปลายโรงเรียนศึกษานารีวิทยา</h5>
+                    <p class="text-muted"> เรียนสายวิทย์-คณิต </p>
               </div>
-          </li>
+            </li>
+          <li>
+            <div class="timeline-badge">
+                 <p class="text-info">7 Aug 2018</p> 
+            </div>
+            <div class="timeline-card">
+                  <h5>มหาลัยวิทยาลัยราชภัฏสวนสุนันทา</h5>
+                  <p class="text-muted">Computer Engineering</p>
+            </div>
+        </li>
+        
           <li class="timeline-arrow">
             <i class="fas fa-chevron-down"></i>
           </li>
