--- a/contact.html
+++ b/contact.html
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="node_modules/@fortawesome/fontawesome-free/css/all.min.css">
+    <link rel="stylesheet" href="node_modules/owl.carousel/dist/assets/owl.carousel.min.css" />
+    <link rel="stylesheet" href="node_modules/owl.carousel/dist/assets/owl.theme.default.min.css">
     <link rel="stylesheet" href="Assets/css/style.css">
-    <title>About</title>
+    <title>Contact</title>
 </head>
 <body>
 
@@ -16,7 +18,7 @@
         <div class="container">
         <a class="navbar-brand" href="index.html">
             <img src="C:/xampp/htdocs/blog/Assets/image/logo.png" width="30" height="30" class="d-inline-block align-top" alt="">
-            Classnaja
+            Lolipop
           </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarKey" aria-controls="navbarKey" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -27,13 +29,13 @@
             <li class="nav-item ">
                <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
             </li>
-            <li class="nav-item active">
+            <li class="nav-item ">
                <a class="nav-link" href="about.html">About</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item ">
                 <a class="nav-link" href="Blog.html">Blog</a>
              </li>
-             <li class="nav-item">
+             <li class="nav-item active">
                 <a class="nav-link" href="contact.html">contact</a>
              </li>
             
@@ -43,88 +45,82 @@
       </nav>
 
 <!-- Section Page-title -->
-     <header data-jarallax = '{"speede" : 0.6}' class="page-title" 
-     style="background-image: url('https://images.unsplash.com/photo-1480506132288-68f7705954bd?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1093&q=80');">
-         <div class="container">
-             <div class="row">
-                  <div class="col-12 text-center">
-                    <h4 class="display-4  font-weight-bold"> MY LOLITA</h4>
-                    <p class="lead">naja</p>
-                  </div>
-             </div>
+     <header data-jarallax = '{"speede" : 0.6}'  
+     style="background-image: url('https://images.unsplash.com/photo-1572708890644-b81bf13e3fb6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=675&q=80');">
+            <div class="blog-image">
+                <h4 class="display-4  font-weight-bold"> CONTACT</h4>
+                <p class="lead">Lolipop</p>
          </div>
     </header>
 
-<!-- Section To Do -->
-     <section class="container py-5">
-         <div class="row">     
-             <div class="col-lg-6 py-3 p-lg-0"> <!--ถ้าจอเล็กกว่า lg-6 จะขยับpy3 ถ้ามากกว่าจอโทรสัพทจะเป็น p-lg-0-->
-                <div class="embed-responsive embed-responsive-16by9">
-                    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/zE-23k5xf7M" frameborder="0" allowfullscreen></iframe>
-                  </div>
-             </div>
-             <div class="col-lg-6">
-                 <h2>S o n g ทำให้นะจ๊ะ</h2>
-                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quam labore quas libero asperiores? Similique doloribus nulla aliquid assumenda nam expedita fugiat tempore inventore sit. Temporibus aliquid earum quo placeat distinctio.</p>
-                 <br>
-                 <h3>Song</h3>
-                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nisi maiores corrupti labore sint aut enim nobis ex reiciendis praesentium earum ipsa quisquam esse harum autem ab, dolorum ut consequuntur perspiciatis!</p>
-             </div>
-         </div>
-     </section>
-
-<!-- Section TimeLine  -->
-     <section  class="position-relative py-5 "  data-jarallax = '{"speede" : 0.6}'
-     style="background-image: url('https://images.unsplash.com/photo-1520092352425-9699926a9b0b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80');">
-         <div class="container">
-             <div class="row">
-                  <div class="col-12 text-center">          <!--img-fluid ทำให้ไม่ใหญ่เกินรูปเกินขนาด-->
-                      <img src="Assets/image/logo.png" class="img-fluid" width="150" alt="">
-                    <h4 class="text-white display-4  font-weight-bold">TIMELINE</h4>
-                  </div>
-             </div>
-         </div>
-     </section>
-
-     <section class="container py-5">
-       <div class="row">      
-         <div class="col-12">
-           <ul class="timeline">
-             <li>
-                 <div class="timeline-badge">
-                      <p class="text-info">30 Mar 2000</p> 
+<!-- Section Blog -->
+   <section class="container py-5">
+       <div class="row text-center">
+           <div class="col-12">
+             <h2 class="border-short-bottom">รายละเอียด</h2>
+        </div>
+        <div class="col-sm-4 mb-3">  
+             <div class="card h-100">  <!--h-100 ทำให้การดกล่องเท่ากัน-->
+                 <div class="card-body">
+                    <i class="fa fa-address-card py-2 fa-3x text-warning" aria-hidden="true"></i>
+                     <h4 class="card-title">ที่อยู่</h4> 
+                     <p class="card-text">กรุงเทพ บางบอน </p>
                  </div>
-                 <div class="timeline-card">
-                       <h5>วันเกิด</h5>
-                       <p class="text-muted"> เกิดวันที่ 30 มีนาคม 2000 </p>
-                 </div>
-             </li>
-             <li class="invverted">
-              <div class="timeline-badge">
-                   <p class="text-info">15 May 2015</p> 
-              </div>
-              <div class="timeline-card">
-                    <h5>เข้าเรียนมัธยมปลายโรงเรียนศึกษานารีวิทยา</h5>
-                    <p class="text-muted"> เรียนสายวิทย์-คณิต </p>
-              </div>
-            </li>
-          <li>
-            <div class="timeline-badge">
-                 <p class="text-info">7 Aug 2018</p> 
+             </div>
+        </div>
+        <div class="col-sm-4 mb-3">
+            <div class="card h-100">
+                <div class="card-body">
+                    <i class="fa fa-phone-square py-2 fa-3x text-warning" aria-hidden="true"></i>
+                    <h4 class="card-title">เบอร์โทรศัทพ์</h4>
+                    <p class="card-text">(66+)55-555-5555</p>
+                </div>
             </div>
-            <div class="timeline-card">
-                  <h5>มหาลัยวิทยาลัยราชภัฏสวนสุนันทา</h5>
-                  <p class="text-muted">Computer Engineering</p>
+        </div>
+        <div class="col-sm-4 mb-3">
+            <div class="card h-100">
+                <div class="card-body">
+                    <i class="fa fa-envelope py-2 fa-3x text-warning" aria-hidden="true"></i>
+                    <h4 class="card-title">อีเมล์</h4>
+                    <p class="card-text">ppppp@email.com</p>
+                </div>
             </div>
-        </li>
-        
-          <li class="timeline-arrow">
-            <i class="fas fa-chevron-down"></i>
-          </li>
-           </ul>
-         </div>
+        </div>
+
        </div>
-     </section>
+       <div class="row">
+           <div class="col-12">
+               <div class="card">
+                   <div class="card-body">
+                       <h5 class="card-text">แบบฟอร์มติดต่อเรา</h5>
+                       <form>
+                        <div class="form-row">
+                          <div class="form-groug col-md-4">
+                              <label for="name">ชื่อ</label>
+                            <input type="text"  id="name" class="form-control" placeholder="ชื่อของคุณ">
+                          </div>
+                          <div class="form-groug col-md-4">
+                            <label for="phone">เบอร์โทรศัทพ์</label>
+                          <input type="text"  id="phone" class="form-control" placeholder="เบอร์โทรศัทพ์ของคุณ">
+                        </div>
+                        <div class="form-groug col-md-4">
+                            <label for="email">อีเมล์</label>
+                          <input type="text"  id="email" class="form-control" placeholder="examle@email.com">
+                        </div>
+                        <div class="form-group col-12 ">
+                            <label for="message">ข้อความของคุณ</label>
+                          <textarea id="message"  rows="5" class="form-control" placeholder="เขียนข้อความของคุณที่นี้"></textarea>
+                        </div>
+                        <button type="submit" class="btn-primary d-block mx-auto">ส่งข้อความ</button>
+                        </div>
+                      </form>
+                   </div>
+               </div>
+           </div>
+       </div>
+   </section>
+
+
 
 <!-- Section About -->
      <section  class="position-relative py-5 "  data-jarallax = '{"speede" : 0.6}'
@@ -134,21 +130,6 @@
                   <div class="col-12 text-center">          <!--img-fluid ทำให้ไม่ใหญ่เกินรูปเกินขนาด-->
                       <img src="Assets/image/logo.png" class="img-fluid" width="150" alt="">
                     <h4 class="text-white display-4  font-weight-bold">P O P E Y E</h4>
-                    <div class="star-rating">
-                      <span>☆</span>
-                      <span>☆</span>
-                      <span>☆</span>
-                      <span>☆</span>
-                      <span>☆</span>
-                      <div class="star-current" style="width: 100%;">
-                          <span>★</span>
-                          <span>★</span>
-                          <span>★</span>
-                          <span>★</span>
-                          <span>★</span>
-
-                      </div>
-                    </div>
                   </div>
              </div>
          </div>
@@ -208,9 +189,12 @@
       </footer>
 
 
-    <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
-    <script src="node_modules/jquery/dist/jquery.min.js"></script>
-    <script src="node_modules/jarallax/dist/jarallax.min.js"></script>
-    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+      <script src="node_modules/jquery/dist/jquery.min.js"></script>
+      <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+      <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
+      <script src="node_modules/owl.carousel/dist/owl.carousel.min.js"></script>
+      <script src="node_modules/jarallax/dist/jarallax.min.js"></script>
+      <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAOgU18_tVZdK-nJ0iDuutPnbUsTYwE_XA&callback=initMap"></script>
+      <script src="assets/js/main.js"></script>
 </body>
 </html>
