--- a/Blog-Detail.html
+++ b/Blog-Detail.html
@@ -36,7 +36,7 @@
                 <a class="nav-link" href="Blog.html">Blog</a>
              </li>
              <li class="nav-item">
-                <a class="nav-link" href="#">contact</a>
+                <a class="nav-link" href="contact.html">contact</a>
              </li>
             
             </ul>
@@ -163,7 +163,7 @@
             
           </div>
           <div class="col-12">
-              Lolipop
+              Lolipop  
           </div>
         </div>
     </section>
