--- a/blog.html
+++ b/blog.html
@@ -34,7 +34,7 @@
                 <a class="nav-link" href="Blog.html">Blog</a>
              </li>
              <li class="nav-item">
-                <a class="nav-link" href="#">contact</a>
+                <a class="nav-link" href="contact.html">contact</a>
              </li>
             
             </ul>
