--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
                <a class="nav-link" href="about.html">About</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Blog</a>
+                <a class="nav-link" href="Blog.html">Blog</a>
              </li>
              <li class="nav-item">
-                <a class="nav-link" href="#">contact</a>
+                <a class="nav-link" href="contact.html">contact</a>
              </li>
             
             </ul>
@@ -89,7 +89,7 @@
   <section class="jumbotron jumbotron-fluid text-center">
     <div class="container">
       <h1 class="border-short-bottom">Fluid jumbotron</h1>
-      <hr>
+     
       <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
     </div>
   </section>
