add section on to top all file

--- a/blog.html
+++ b/blog.html
@@ -263,7 +263,10 @@
         All Right Reserved ...
       </footer>
 
-
+<!-- Section on to top  -->
+<div class="to-top">
+  <i class="fas fa-angle-double-up"></i>
+</div>
     
       <script src="node_modules/jquery/dist/jquery.min.js"></script>
       <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
