--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,7 @@
 <!-- Section Page-title -->
      <header data-jarallax = '{"speede" : 0.6}'  
      style="background-image: url('https://images.unsplash.com/photo-1572708890644-b81bf13e3fb6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=675&q=80');">
-            <div class="blog-image">
+            <div class="blog-image">   <!-- เป้นคลาสทำมัวเบลอจางง-->
                 <h4 class="display-4  font-weight-bold"> CONTACT</h4>
                 <p class="lead">Lolipop</p>
          </div>
@@ -188,6 +188,10 @@
         All Right Reserved ...
       </footer>
 
+<!-- Section on to top  -->
+<div class="to-top">
+  <i class="fas fa-angle-double-up"></i>
+</div>
 
       <script src="node_modules/jquery/dist/jquery.min.js"></script>
       <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
