--- a/Blog-Detail.html
+++ b/Blog-Detail.html
@@ -165,6 +165,7 @@
           <div class="col-12">
               Lolipop  
           </div>
+          
         </div>
     </section>
 
@@ -236,6 +237,10 @@
         All Right Reserved ...
       </footer>
 
+<!-- Section on to top  -->
+<div class="to-top">
+  <i class="fas fa-angle-double-up"></i>
+</div>
 
       <script src="node_modules/jquery/dist/jquery.min.js"></script>
       <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
