--- a/index.html
+++ b/index.html
@@ -273,8 +273,15 @@
       </footer>
 
 
+<!-- Section on to top  -->
+      <div class="to-top">
+        <i class="fas fa-angle-double-up"></i>
+      </div>
+    
+
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+     <script src="Assets/js/main.js"></script>
 </body>
 </html>
