Add firebase ,favicons

--- a/Blog-Detail.html
+++ b/Blog-Detail.html
@@ -17,7 +17,7 @@
 
         <div class="container">
         <a class="navbar-brand" href="index.html">
-            <img src="C:/xampp/htdocs/blog/Assets/image/logo.png" width="30" height="30" class="d-inline-block align-top" alt="">
+            <img src="C:/xampp/htdocs/blog/Assets/images/logo.png" width="30" height="30" class="d-inline-block align-top" alt="">
             Lolipop
           </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarKey" aria-controls="navbarKey" aria-expanded="false" aria-label="Toggle navigation">
@@ -89,7 +89,7 @@
             <section class="col-12 p-2" >
               <div class="card mb-4 h-100">
                 <a href="#" class="warpper-card-img">  <!--ตั้งค่าให้รูปขนาด16:9-->
-                  <img src="Assets/image/img3.jpg" alt="...">
+                  <img src="Assets/images/img3.jpg" alt="...">
                 </a>
                   <div class="card-body">
                     <h5 class="card-title">Lolita</h5>
@@ -104,7 +104,7 @@
           <section class="col-12 p-2" >
             <div class="card mb-4 h-100">
               <a href="#" class="warpper-card-img">  <!--ตั้งค่าให้รูปขนาด16:9-->
-                <img src="Assets/image/img3.jpg" alt="...">
+                <img src="Assets/images/img3.jpg" alt="...">
               </a>
                 <div class="card-body">
                   <h5 class="card-title">Lolita</h5>
@@ -119,7 +119,7 @@
         <section class="col-12 p-2" >
           <div class="card mb-4 h-100">
             <a href="#" class="warpper-card-img">  <!--ตั้งค่าให้รูปขนาด16:9-->
-              <img src="Assets/image/img3.jpg" alt="...">
+              <img src="Assets/images/img3.jpg" alt="...">
             </a>
               <div class="card-body">
                 <h5 class="card-title">Lolita</h5>
@@ -134,7 +134,7 @@
       <section class="col-12 p-2" >
         <div class="card mb-4 h-100">
           <a href="#" class="warpper-card-img">  <!--ตั้งค่าให้รูปขนาด16:9-->
-            <img src="Assets/image/img3.jpg" alt="...">
+            <img src="Assets/images/img3.jpg" alt="...">
           </a>
             <div class="card-body">
               <h5 class="card-title">Lolita</h5>
@@ -149,7 +149,7 @@
     <section class="col-12 p-2" >
       <div class="card mb-4 h-100">
         <a href="#" class="warpper-card-img">  <!--ตั้งค่าให้รูปขนาด16:9-->
-          <img src="Assets/image/img3.jpg" alt="...">
+          <img src="Assets/images/img3.jpg" alt="...">
         </a>
           <div class="card-body">
             <h5 class="card-title">Lolita</h5>
@@ -177,7 +177,7 @@
          <div class="container">
              <div class="row">
                   <div class="col-12 text-center">          <!--img-fluid ทำให้ไม่ใหญ่เกินรูปเกินขนาด-->
-                      <img src="Assets/image/logo.png" class="img-fluid" width="150" alt="">
+                      <img src="Assets/images/logo.png" class="img-fluid" width="150" alt="">
                     <h4 class="text-white display-4  font-weight-bold">P O P E Y E</h4>
                   </div>
              </div>
@@ -189,7 +189,7 @@
          <div class="row">
               <div class="col-md-4">
                 <a class="navbar-brand" href="#">
-                  <img src="C:/xampp/htdocs/blog/Assets/image/logo.png" width="50" height="50" class="d-inline-block align-top" alt="">
+                  <img src="C:/xampp/htdocs/blog/Assets/images/logo.png" width="50" height="50" class="d-inline-block align-top" alt="">
                   Classnaja
                 </a>
                 <p>
