--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
 
         <div class="container">
         <a class="navbar-brand" href="index.html">
-            <img src="C:/xampp/htdocs/blog/Assets/image/logo.png" width="30" height="30" class="d-inline-block align-top" alt="">
+            <img src="C:/xampp/htdocs/blog/Assets/images/logo.png" width="30" height="30" class="d-inline-block align-top" alt="">
             Classnaja
           </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarKey" aria-controls="navbarKey" aria-expanded="false" aria-label="Toggle navigation">
@@ -79,7 +79,7 @@
          <div class="container">
              <div class="row">
                   <div class="col-12 text-center">          <!--img-fluid ทำให้ไม่ใหญ่เกินรูปเกินขนาด-->
-                      <img src="Assets/image/logo.png" class="img-fluid" width="150" alt="">
+                      <img src="Assets/images/logo.png" class="img-fluid" width="150" alt="">
                     <h4 class="text-white display-4  font-weight-bold">TIMELINE</h4>
                   </div>
              </div>
@@ -132,7 +132,7 @@
          <div class="container">
              <div class="row">
                   <div class="col-12 text-center">          <!--img-fluid ทำให้ไม่ใหญ่เกินรูปเกินขนาด-->
-                      <img src="Assets/image/logo.png" class="img-fluid" width="150" alt="">
+                      <img src="Assets/images/logo.png" class="img-fluid" width="150" alt="">
                     <h4 class="text-white display-4  font-weight-bold">P O P E Y E</h4>
                     <div class="star-rating">
                       <span>☆</span>
@@ -159,7 +159,7 @@
          <div class="row">
               <div class="col-md-4">
                 <a class="navbar-brand" href="#">
-                  <img src="C:/xampp/htdocs/blog/Assets/image/logo.png" width="50" height="50" class="d-inline-block align-top" alt="">
+                  <img src="C:/xampp/htdocs/blog/Assets/images/logo.png" width="50" height="50" class="d-inline-block align-top" alt="">
                   Classnaja
                 </a>
                 <p>
