--- a/blog.html
+++ b/blog.html
@@ -15,7 +15,7 @@
 
         <div class="container">
         <a class="navbar-brand" href="index.html">
-            <img src="C:/xampp/htdocs/blog/Assets/image/logo.png" width="30" height="30" class="d-inline-block align-top" alt="">
+            <img src="C:/xampp/htdocs/blog/Assets/images/logo.png" width="30" height="30" class="d-inline-block align-top" alt="">
             Classnaja
           </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarKey" aria-controls="navbarKey" aria-expanded="false" aria-label="Toggle navigation">
@@ -77,7 +77,7 @@
         <section class="col  col-sm-6 col-md-4 col-lg-3 p-2" >
           <div class="card mb-4 h-100">
             <a href="Blog-Detail.html?id=001" class="warpper-card-img">  <!--ตั้งค่าให้รูปขนาด16:9   ?id=001 เป็นคียของphpบอกไอดีดาต้าเบส-->
-              <img src="Assets/image/img4.jpg" alt="...">
+              <img src="Assets/images/img4.jpg" alt="...">
             </a>
               <div class="card-body">
                 <h5 class="card-title">Lolita Fashion</h5>
@@ -92,7 +92,7 @@
       <section class="col  col-sm-6 col-md-4 col-lg-3 p-2" >
         <div class="card mb-4 h-100">
           <a href="#" class="warpper-card-img">
-            <img src="Assets/image/img4.jpg"  alt="...">
+            <img src="Assets/images/img4.jpg"  alt="...">
           </a>
             <div class="card-body">
               <h5 class="card-title">Lolita</h5>
@@ -107,7 +107,7 @@
       <section class="col  col-sm-6 col-md-4 col-lg-3 p-2" >
           <div class="card mb-4 h-100">
             <a href="#" class="warpper-card-img">
-              <img src="Assets/image/img2.jpg"  alt="...">
+              <img src="Assets/images/img2.jpg"  alt="...">
             </a>
               <div class="card-body">
                 <h5 class="card-title">Lolita</h5>
@@ -122,7 +122,7 @@
       <section class="col  col-sm-6 col-md-4 col-lg-3 p-2" >
         <div class="card mb-4 h-100">
           <a href="#" class="warpper-card-img">  <!--ตั้งค่าให้รูปขนาด16:9-->
-            <img src="Assets/image/img3.jpg" alt="...">
+            <img src="Assets/images/img3.jpg" alt="...">
           </a>
             <div class="card-body">
               <h5 class="card-title">Lolita</h5>
@@ -137,7 +137,7 @@
       <section class="col  col-sm-6 col-md-4 col-lg-3 p-2" >
         <div class="card mb-4 h-100">
           <a href="#" class="warpper-card-img">
-            <img src="Assets/image/img2.jpg"  alt="...">
+            <img src="Assets/images/img2.jpg"  alt="...">
           </a>
             <div class="card-body">
               <h5 class="card-title">Lolita</h5>
@@ -152,7 +152,7 @@
       <section class="col  col-sm-6 col-md-4 col-lg-3 p-2" >
         <div class="card mb-4 h-100">
           <a href="#" class="warpper-card-img">  <!--ตั้งค่าให้รูปขนาด16:9-->
-            <img src="Assets/image/img3.jpg" alt="...">
+            <img src="Assets/images/img3.jpg" alt="...">
           </a>
             <div class="card-body">
               <h5 class="card-title">Lolita</h5>
@@ -167,7 +167,7 @@
     <section class="col  col-sm-6 col-md-4 col-lg-3 p-2" >
         <div class="card mb-4 h-100">
           <a href="#" class="warpper-card-img">
-            <img src="Assets/image/img2.jpg"  alt="...">
+            <img src="Assets/images/img2.jpg"  alt="...">
           </a>
             <div class="card-body">
               <h5 class="card-title">Lolita</h5>
@@ -182,7 +182,7 @@
     <section class="col  col-sm-6 col-md-4 col-lg-3 p-2" >
       <div class="card mb-4 h-100">
         <a href="#" class="warpper-card-img">  <!--ตั้งค่าให้รูปขนาด16:9-->
-          <img src="Assets/image/img3.jpg" alt="...">
+          <img src="Assets/images/img3.jpg" alt="...">
         </a>
           <div class="card-body">
             <h5 class="card-title">Lolita</h5>
@@ -203,7 +203,7 @@
          <div class="container">
              <div class="row">
                   <div class="col-12 text-center">          <!--img-fluid ทำให้ไม่ใหญ่เกินรูปเกินขนาด-->
-                      <img src="Assets/image/logo.png" class="img-fluid" width="150" alt="">
+                      <img src="Assets/images/logo.png" class="img-fluid" width="150" alt="">
                     <h4 class="text-white display-4  font-weight-bold">P O P E Y E</h4>
                   </div>
              </div>
@@ -215,7 +215,7 @@
          <div class="row">
               <div class="col-md-4">
                 <a class="navbar-brand" href="#">
-                  <img src="C:/xampp/htdocs/blog/Assets/image/logo.png" width="50" height="50" class="d-inline-block align-top" alt="">
+                  <img src="C:/xampp/htdocs/blog/Assets/images/logo.png" width="50" height="50" class="d-inline-block align-top" alt="">
                   Classnaja
                 </a>
                 <p>
