--- a/index.html
+++ b/index.html
@@ -3,6 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+
+    <!-- favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="Assets/images/favicons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="Assets/images/favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="Assets/images/favicons/favicon-16x16.png">
+    <link rel="manifest" href="Assets/images/favicons/site.webmanifest">
+    <link rel="mask-icon" href="Assets/images/favicons/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="shortcut icon" href="Assets/images/favicons/favicon.ico">
+    <meta name="msapplication-TileColor" content="#f9a1e2">
+    <meta name="msapplication-config" content="Assets/images/favicons/browserconfig.xml">
+    <meta name="theme-color" content="#ffffff">
+
+    <!-- Section css -->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="node_modules/@fortawesome/fontawesome-free/css/all.min.css">
     <link rel="stylesheet" href="Assets/css/style.css">
@@ -15,7 +29,7 @@
 
         <div class="container">
         <a class="navbar-brand" href="index.html">
-            <img src="C:/xampp/htdocs/blog/Assets/image/logo.png" width="30" height="30" class="d-inline-block align-top" alt="">
+            <img src="C:/xampp/htdocs/blog/Assets/images/logo.png" width="30" height="30" class="d-inline-block align-top" alt="">
             Classnaja
           </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarKey" aria-controls="navbarKey" aria-expanded="false" aria-label="Toggle navigation">
@@ -158,7 +172,7 @@
   <section class="col  col-sm-6 col-md-4 col-lg-3 p-2" >
     <div class="card mb-4 h-100">
       <a href="#" class="warpper-card-img">  <!--ตั้งค่าให้รูปขนาด16:9-->
-        <img src="Assets/image/img3.jpg" alt="...">
+        <img src="Assets/images/img3.jpg" alt="...">
       </a>
         <div class="card-body">
           <h5 class="card-title">Lolita</h5>
@@ -173,7 +187,7 @@
 <section class="col  col-sm-6 col-md-4 col-lg-3 p-2" >
     <div class="card mb-4 h-100">
       <a href="#" class="warpper-card-img">
-        <img src="Assets/image/img2.jpg"  alt="...">
+        <img src="Assets/images/img2.jpg"  alt="...">
       </a>
         <div class="card-body">
           <h5 class="card-title">Lolita</h5>
@@ -188,7 +202,7 @@
 <section class="col  col-sm-6 col-md-4 col-lg-3 p-2" >
   <div class="card mb-4 h-100">
     <a href="#" class="warpper-card-img">  <!--ตั้งค่าให้รูปขนาด16:9-->
-      <img src="Assets/image/img3.jpg" alt="...">
+      <img src="Assets/images/img3.jpg" alt="...">
     </a>
       <div class="card-body">
         <h5 class="card-title">Lolita</h5>
@@ -203,7 +217,7 @@
 <section class="col  col-sm-6 col-md-4 col-lg-3 p-2" >
   <div class="card mb-4 h-100">
     <a href="#" class="warpper-card-img">
-      <img src="Assets/image/img2.jpg"  alt="...">
+      <img src="Assets/images/img2.jpg"  alt="...">
     </a>
       <div class="card-body">
         <h5 class="card-title">Lolita</h5>
@@ -224,7 +238,7 @@
          <div class="row">
               <div class="col-md-4">
                 <a class="navbar-brand" href="#">
-                  <img src="C:/xampp/htdocs/blog/Assets/image/logo.png" width="50" height="50" class="d-inline-block align-top" alt="">
+                  <img src="C:/xampp/htdocs/blog/Assets/images/logo.png" width="50" height="50" class="d-inline-block align-top" alt="">
                   Classnaja
                 </a>
                 <p>
