--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
 
         <div class="container">
         <a class="navbar-brand" href="index.html">
-            <img src="C:/xampp/htdocs/blog/Assets/image/logo.png" width="30" height="30" class="d-inline-block align-top" alt="">
+            <img src="C:/xampp/htdocs/blog/Assets/images/logo.png" width="30" height="30" class="d-inline-block align-top" alt="">
             Lolipop
           </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarKey" aria-controls="navbarKey" aria-expanded="false" aria-label="Toggle navigation">
@@ -128,7 +128,7 @@
          <div class="container">
              <div class="row">
                   <div class="col-12 text-center">          <!--img-fluid ทำให้ไม่ใหญ่เกินรูปเกินขนาด-->
-                      <img src="Assets/image/logo.png" class="img-fluid" width="150" alt="">
+                      <img src="Assets/images/logo.png" class="img-fluid" width="150" alt="">
                     <h4 class="text-white display-4  font-weight-bold">P O P E Y E</h4>
                   </div>
              </div>
@@ -140,7 +140,7 @@
          <div class="row">
               <div class="col-md-4">
                 <a class="navbar-brand" href="#">
-                  <img src="C:/xampp/htdocs/blog/Assets/image/logo.png" width="50" height="50" class="d-inline-block align-top" alt="">
+                  <img src="C:/xampp/htdocs/blog/Assets/images/logo.png" width="50" height="50" class="d-inline-block align-top" alt="">
                   Classnaja
                 </a>
                 <p>
